app/assets/stylesheets/application.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import "font-awesome-sprockets";
@import "font-awesome";
@import 'rails_bootstrap_forms';
@import '1st_load_framework';
@import 'navbar';
@import 'footer';
@import 'drill_team_color_guard';
@import 'select2';
@import 'select2-bootstrap';

.jumbotron {
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #000;
  height: 400px;
}

p {
  text-indent: 15px;
  font-size: 16px;
}

html, body {
  height: 100%;
  margin: 0;
  background-color: rgb(255, 255, 255);
}

.who-are-we {
  text-align: center;
  font-size: 110%;
  .panel {
    border-radius:0;
    transition: box-shadow 0.5s;  
  }
  .panel:hover {
    box-shadow: 5px 0px 40px rgba(0,0,0, .2);
  }
}

.where-are-we {
  background-color: rgb(218, 223, 225);
}

.contact-us {
  form {
    input {
      padding: 20px;
      height: 60px;
    }
    textarea {
      padding: 20px;
      height: 213px;
    }
  }
}

.prospective {
  h2 { padding-bottom: 10px; }
  h4 { 
    color: rgb(193,18,33); 
    text-decoration: underline;
  }
  p {
    padding-bottom: 20px;
  }
}

.privacy {
  h2 {
    text-decoration: underline;
  }
}

#back-to-top {
    cursor: pointer;
    position: fixed;
    bottom: 20px;
    right: 20px;
    display:none;
}

#home-links {
  padding: 15px 5px;
  float: right;
  font: 120% Helvetica, sans-serif;
  background-color:rgba(0,0,0,0.4);
  border-radius: 10px;
  a {
    color: #FFF;
  }
}

